clusters/talos-robbinsdale/apps/tailscale/tclip/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tclip
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
  hostnames:
    - "tclip.rajsingh.info"
    - "tclip.lukehouge.com"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: tclip
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
